# rubric_autofill

./: .gitignore  LICENSE.txt  README.md  instructions.txt  pyproject.toml  requirements.txt  rubric_autofill.py  rubric_autofill.spec  rubric_test.csv
src/: __init__.py  __main__.py  rubric_autofill.py
